@@ -67,7 +67,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
   RdfContentTypeProperties.class, FileStoreConfig.class, DidDocumentResolver.class, JwtSignatureVerifier.class, SecurityAuditorAware.class})
 @Slf4j
 @AutoConfigureEmbeddedDatabase(provider = DatabaseProvider.ZONKY)
-//@Import(EmbeddedNeo4JConfig.class)
 public class AssetStoreTest {
 
   @SpringBootApplication
@@ -81,8 +80,6 @@ public class AssetStoreTest {
   @Autowired
   private AssetStore assetStorePublisher;
 
-  //@Autowired
-  //private Neo4j embeddedDatabaseServer;
 
   @Autowired
   private GraphStore graphStore;
@@ -91,11 +88,6 @@ public class AssetStoreTest {
   public void storageSelfCleaning() throws IOException {
     assetStorePublisher.clear();
   }
-
-  //@AfterAll
-  //void closeNeo4j() {
-  //  embeddedDatabaseServer.close();
-  //}
 
   private static AssetMetadata createAssetMetadata(final String id, final String issuer,
       final Instant sdt, final Instant udt, final String content) {
@@ -140,47 +132,12 @@ public class AssetStoreTest {
     return new CredentialVerificationResultOffering(assetMeta.getStatusDatetime(), AssetStatus.ACTIVE.getValue(), assetMeta.getIssuer(), assetMeta.getUploadDatetime(),
             assetMeta.getId(), createClaims("<https://delta-dao.com/.well-known/serviceMVGPortal.json>"), vals);
   }
-  
-  /**
-   * Test storing an asset, ensuring it creates exactly one file on disk, retrieving it by hash, and deleting
-   * it again.
-   */
-  //@Test
-  void test01StoreCredential() {
-    log.info("test01StoreCredential");
-    final String content = "Some Test Content";
-
-    final AssetMetadata assetMeta = createAssetMetadata("https://delta-dao.com/.well-known/serviceMVGPortal.json", // "TestAsset/1",
-        "TestUser/1",
-        Instant.parse("2022-01-01T12:00:00Z"), Instant.parse("2022-01-02T12:00:00Z"), content);
-    final String hash = assetMeta.getAssetHash();
-    CredentialVerificationResult vr = createVerificationResult(assetMeta); //0);
-    assetStorePublisher.storeCredential(assetMeta, vr);
-
-    assertThatAssetHasTheSameData(assetMeta, assetStorePublisher.getByHash(hash), true);
-
-    List<Map<String, Object>> claims = graphStore.queryData(
-        new GraphQuery("MATCH (n {uri: $uri}) RETURN n", Map.of("uri", assetMeta.getId()))).getResults();
-    Assertions.assertTrue(!claims.isEmpty()); //only 1 node found.
-
-    final ContentAccessor assetFileByHash = assetStorePublisher.getFileByHash(hash);
-    assertEquals(assetFileByHash, assetMeta.getContentAccessor(), "Getting the asset file by hash is equal to the stored asset file");
-
-    assetStorePublisher.deleteAsset(hash);
-
-    claims = graphStore.queryData(new GraphQuery("MATCH (n {uri: $uri}) RETURN n", Map.of("uri", assetMeta.getId()))).getResults();
-    Assertions.assertEquals(0, claims.size());
-
-    assertThrows(NotFoundException.class, () -> {assetStorePublisher.getByHash(hash);
-    });
-  }
 
   /**
    * Test storing an asset, and deprecating it by storing a second asset with the same subjectId.
    */
   @Test
-  void test02StoreAndUpdateCredential() {
-    log.info("test02StoreAndUpdateCredential");
+  void storeCredential_withDuplicateSubjectId_replacesExistingAsset() {
     final String content1 = "Some Test Content 1";
     final String content2 = "Some Test Content 2";
 
@@ -207,8 +164,7 @@ public class AssetStoreTest {
   }
 
   //@Test
-  void test03StoreDuplicateCredential() {
-    log.info("test03StoreDuplicateCredential");
+  void storeCredential_withDuplicateContent_throwsConflictException() {
     final String content1 = "Some Test Content";
 
     final AssetMetadata assetMeta1 = createAssetMetadata("TestAsset/1", "TestUser/1",
@@ -220,7 +176,6 @@ public class AssetStoreTest {
         "MATCH (n) WHERE $graphUri IN n.claimsGraphUri RETURN n",
         Map.of("graphUri", "TestAsset/1")
     )).getResults();
-    log.debug("test03StoreDuplicateCredential-1; got {} nodes", nodes.size());
     Assertions.assertEquals(3, nodes.size());
 
     final AssetMetadata assetMeta2 = createAssetMetadata("TestAsset/1", "TestUser/1",
@@ -231,7 +186,6 @@ public class AssetStoreTest {
         "MATCH (n) WHERE $graphUri IN n.claimsGraphUri RETURN n",
         Map.of("graphUri", "TestAsset/1")
     )).getResults();
-    log.debug("test03StoreDuplicateCredential-2; got {} nodes", nodes.size());
     Assertions.assertEquals(3, nodes.size(), "After failed put, node count should not have changed");
 
     final AssetMetadata byHash1 = assetStorePublisher.getByHash(hash1);
@@ -247,8 +201,7 @@ public class AssetStoreTest {
    * Test storing an asset, and updating the status.
    */
   //@Test
-  void test04ChangeAssetStatus() throws Exception {
-    log.info("test04ChangeAssetStatus");
+  void updateAssetStatus_withValidTransition_changesStatus() throws Exception {
     final String content = "Some Test Content";
 
     final AssetMetadata assetMeta = createAssetMetadata("TestAsset/1", "TestUser/1",
@@ -263,7 +216,6 @@ public class AssetStoreTest {
         "MATCH (n) WHERE $graphUri IN n.claimsGraphUri RETURN n",
         Map.of("graphUri", "TestAsset/1")
     )).getResults();
-    log.debug("test04ChangeAssetStatus-1; got {} nodes", nodes.size());
     Assertions.assertEquals(3, nodes.size());
 
     assetStorePublisher.changeLifeCycleStatus(hash, AssetStatus.REVOKED);
@@ -279,7 +231,6 @@ public class AssetStoreTest {
         "MATCH (n) WHERE $graphUri IN n.claimsGraphUri RETURN n",
         Map.of("graphUri", "TestAsset/1")
     )).getResults();
-    log.debug("test04ChangeAssetStatus-2; got {} nodes", nodes.size());
     Assertions.assertEquals(0, nodes.size(), "Revoked asset should not appear in queries");
 
     assertThrows(ConflictException.class, () -> {
@@ -290,7 +241,6 @@ public class AssetStoreTest {
         "MATCH (n) WHERE $graphUri IN n.claimsGraphUri RETURN n",
         Map.of("graphUri", "TestAsset/1")
     )).getResults();
-    log.debug("test04ChangeAssetStatus-3; got {} nodes", nodes.size());
     Assertions.assertEquals(0, nodes.size(), "Revoked asset should not appear in queries");
 
     assetStorePublisher.deleteAsset(hash);
@@ -302,8 +252,7 @@ public class AssetStoreTest {
    * Test applying an asset filter on matching issuer.
    */
   @Test
-  void test05FilterMatchingIssuer() {
-    log.info("test05FilterMatchingIssuer");
+  void filter_withMatchingIssuer_returnsMatchingAsset() {
     final String id = "TestAsset/1";
     final String issuer = "TestUser/1";
     final String content = "Test: Fetch asset metadata via asset filter, test for matching issuer";
@@ -355,15 +304,13 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash);
 
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
-    log.info("#### Test 05 succeeded.");
   }
 
   /**
    * Test applying an asset filter on non-matching issuer.
    */
   @Test
-  void test06FilterNonMatchingIssuer() {
-    log.info("test06FilterNonMatchingIssuer");
+  void filter_withNonMatchingIssuer_returnsEmpty() {
     final String id = "TestAsset/1";
     final String issuer = "TestUser/1";
     final String otherIssuer = "TestUser/2";
@@ -384,16 +331,13 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash);
 
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
-
-    log.info("#### Test 06 succeeded.");
   }
 
   /**
    * Test applying an asset filter on matching status start time.
    */
   @Test
-  void test07FilterMatchingStatusTimeStart() {
-    log.info("test07FilterMatchingStatusTimeStart");
+  void filter_withMatchingStatusStartTime_returnsMatchingAsset() {
     final String id = "TestAsset/1";
     final String issuer = "TestUser/1";
     final String content = "Test: Fetch asset metadata via asset filter, test for matching status time start";
@@ -416,15 +360,13 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash);
 
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
-    log.info("#### Test 07 succeeded.");
   }
 
   /**
    * Test applying an asset filter on non-matching issuer.
    */
   @Test
-  void test08FilterNonMatchingStatusTimeStart() {
-    log.info("test08FilterNonMatchingStatusTimeStart");
+  void filter_withNonMatchingStatusStartTime_returnsEmpty() {
     final String id = "TestAsset/1";
     final String issuer = "TestUser/1";
     final String content = "Test: Fetch asset metadata via asset filter, test for non-matching issuer";
@@ -440,21 +382,18 @@ public class AssetStoreTest {
     filterParams.setStatusTimeRange(statusTimeStart, statusTimeEnd);
     final PaginatedResults<AssetMetadata> byFilter = assetStorePublisher.getByFilter(filterParams, true, false);
     final int matchCount = byFilter.getResults().size();
-    log.info("filter returned {} match(es)", matchCount);
     assertEquals(0, matchCount, "expected 0 filter matches, but got " + matchCount);
 
     assetStorePublisher.deleteAsset(hash);
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
 
-    log.info("#### Test 08 succeeded.");
   }
 
   /**
    * Test applying an asset filter that matches multiple records.
    */
   @Test
-  void test09FilterMatchingMultipleRecords() {
-    log.info("test09FilterMatchingMultipleRecords");
+  void filter_withMultipleAssets_returnsAllMatching() {
     final String id1 = "TestAsset/1";
     final String id2 = "TestAsset/2";
     final String id3 = "TestAsset/3";
@@ -488,7 +427,7 @@ public class AssetStoreTest {
     final int matchCount = byFilter.getResults().size();
     log.info("filter returned {} match(es)", matchCount);
     assertEquals(2, matchCount, "expected 2 filter match, but got " + matchCount);
-    final AssetMetadata filterAssetMeta1 = byFilter.getResults().get(0);
+    final AssetMetadata filterAssetMeta1 = byFilter.getResults().getFirst();
     final AssetMetadata filterAssetMeta2 = byFilter.getResults().get(1);
     assertTrue(assetMeta1.getId().equals(filterAssetMeta1.getId()) || assetMeta1.getId().equals(filterAssetMeta2.getId()), "expected filter match assetMeta1 missing in results");
     assertTrue(assetMeta2.getId().equals(filterAssetMeta1.getId()) || assetMeta2.getId().equals(filterAssetMeta2.getId()), "expected filter match assetMeta2 missing in results");
@@ -500,16 +439,13 @@ public class AssetStoreTest {
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
-
-    log.info("#### Test 09 succeeded.");
   }
 
   /**
    * Test applying an empty asset filter for matching all records.
    */
   @Test
-  void test10EmptyFilterMatchingMultipleRecords() {
-    log.info("test10EmptyFilterMatchingAllRecords");
+  void filter_withEmptyFilter_returnsAllAssets() {
     final String id1 = "TestAsset/1";
     final String id2 = "TestAsset/2";
     final String id3 = "TestAsset/3";
@@ -540,7 +476,7 @@ public class AssetStoreTest {
     final int matchCount = byFilter.getResults().size();
     log.info("filter returned {} match(es)", matchCount);
     assertEquals(3, matchCount, "expected 3 filter match, but got " + matchCount);
-    final AssetMetadata filterAssetMeta1 = byFilter.getResults().get(0);
+    final AssetMetadata filterAssetMeta1 = byFilter.getResults().getFirst();
     final AssetMetadata filterAssetMeta2 = byFilter.getResults().get(1);
     final AssetMetadata filterAssetMeta3 = byFilter.getResults().get(2);
     assertTrue(assetMeta1.getId().equals(filterAssetMeta1.getId()) || assetMeta1.getId().equals(filterAssetMeta2.getId())
@@ -556,16 +492,13 @@ public class AssetStoreTest {
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
-
-    log.info("#### Test 10 succeeded.");
   }
 
   /**
    * Test applying an asset filter on non-matching validator.
    */
   @Test
-  void test11AFilterMatchingValidator() {
-    log.info("test11AFilterMatchingValidator");
+  void filter_withMatchingValidator_returnsMatchingAsset() {
     final String id = "TestAsset/1";
     final String validatorId = "TestAsset/0815";
     final String issuer = "TestUser/1";
@@ -587,16 +520,13 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash);
 
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
-
-    log.info("#### Test 11A succeeded.");
   }
 
   /**
    * Test applying an asset filter on non-matching validator.
    */
   @Test
-  void test11BFilterNonMatchingValidator() {
-    log.info("test11BFilterNonMatchingValidator");
+  void filter_withNonMatchingValidator_returnsEmpty() {
     final String id = "TestAsset/1";
     final String validatorId = "TestAsset/0815";
     final String issuer = "TestUser/1";
@@ -618,16 +548,13 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash);
 
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
-
-    log.info("#### Test 11B succeeded.");
   }
 
   /**
    * Test applying an asset filter with limited number of results.
    */
   @Test
-  void test12FilterLimit() {
-    log.info("test12FilterLimit");
+  void filter_withLimitParameter_returnsLimitedResults() {
     final String id1 = "TestAsset/1";
     final String id2 = "TestAsset/2";
     final String id3 = "TestAsset/3";
@@ -666,7 +593,6 @@ public class AssetStoreTest {
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
-    log.info("#### Test 12 succeeded.");
   }
 
   private CredentialVerificationResult verifyAssetCredential(String id, Instant firstSigInstant) {
@@ -679,8 +605,7 @@ public class AssetStoreTest {
   }
 
   @Test
-  void test13PeriodicValidationOfSignatures() throws IOException {
-    log.info("test13PeriodicValidationOfSignatures");
+  void validateSignatures_periodicExecution_revalidatesExpiredAssets() throws IOException {
     final String id1 = "TestAsset/1";
     final String id2 = "TestAsset/2";
     final String id3 = "TestAsset/3";
@@ -722,15 +647,13 @@ public class AssetStoreTest {
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
-    log.info("#### Test 13 succeeded.");
   }
 
   /**
    * Test applying an asset filter with limited number of results with total asset count number.
    */
   @Test
-  void test13FilterLimitWithTotalCount() {
-    log.info("test12FilterLimit");
+  void filter_withLimitAndTotalCount_returnsCorrectCounts() {
     final String id1 = "TestAsset/1";
     final String id2 = "TestAsset/2";
     final String id3 = "TestAsset/3";
@@ -771,7 +694,6 @@ public class AssetStoreTest {
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
     assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
-    log.info("#### Test 13 succeeded.");
   }
 
 }
